Compiler/src/syntax/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGIN
    DIVIDE
    END
    GAME
    LBRACE
    MAIN
    MINUS
    MULTI
    PLUS
    RBRACE

Grammar

Rule 0     S' -> statements
Rule 1     statements -> var_assign statements
Rule 2     statements -> var_define statements
Rule 3     statements -> For statements
Rule 4     statements -> Dow statements
Rule 5     statements -> Inc statements
Rule 6     statements -> Dec statements
Rule 7     statements -> Random statements
Rule 8     statements -> Spiderweb statements
Rule 9     statements -> ForAssignWord statements
Rule 10    statements -> empty
Rule 11    Random -> RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
Rule 12    atomic_variable -> NUMBER
Rule 13    atomic_variable -> ID
Rule 14    atomic_variable -> ID LSPAREN ID RSPAREN
Rule 15    atomic_variable -> ID LSPAREN NUMBER RSPAREN
Rule 16    var_assign -> TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
Rule 17    var_assign -> TYPE ID SEMCOL
Rule 18    var_define -> ID EQUAL ATOMIC SEMCOL
Rule 19    var_define -> ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
Rule 20    var_define -> TYPE ID EQUAL ATOMIC SEMCOL
Rule 21    var_define -> ID EQUAL atomic_variable SEMCOL
Rule 22    var_define -> ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
Rule 23    var_define -> ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
Rule 24    Spiderweb -> SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
Rule 25    ForAssignWord -> FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
Rule 26    Inc -> INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
Rule 27    Dec -> DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
Rule 28    RandomFor -> RANDOM LPAREN ID COMMA atomic_variable RPAREN SEMCOL
Rule 29    RandomFor -> RANDOM LPAREN NUMBER COMMA atomic_variable RPAREN SEMCOL
Rule 30    RandomFor -> RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
Rule 31    ObjectFor -> OBJECT LPAREN atomic_variable_for COMMA atomic_variable_for COMMA atomic_variable_for RPAREN SEMCOL
Rule 32    BalloonFor -> BALLOON LPAREN ID COMMA ID RPAREN SEMCOL
Rule 33    BalloonFor -> BALLOON LPAREN ID COMMA NUMBER RPAREN SEMCOL
Rule 34    BalloonFor -> BALLOON LPAREN NUMBER COMMA ID RPAREN SEMCOL
Rule 35    BalloonFor -> BALLOON LPAREN NUMBER COMMA NUMBER RPAREN SEMCOL
Rule 36    IncFor -> INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
Rule 37    DecFor -> DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
Rule 38    Body -> IncFor Body
Rule 39    Body -> DecFor Body
Rule 40    Body -> BalloonFor Body
Rule 41    Body -> RandomFor Body
Rule 42    Body -> ObjectFor Body
Rule 43    Body -> empty
Rule 44    For -> FOR NUMBER TIMES USING ID Body FOREND SEMCOL
Rule 45    Dow -> DOW LPAREN ID RPAREN Body ENDDO SEMCOL
Rule 46    Dow -> DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
Rule 47    empty -> <empty>
Rule 48    TYPE -> INT
Rule 49    TYPE -> STRING LPAREN NUMBER RPAREN
Rule 50    ATOMIC -> NUMBER
Rule 51    ATOMIC -> TEXT
Rule 52    atomic_variable_for -> ID LSPAREN atomic_variable RSPAREN
Rule 53    atomic_variable_for -> ID
Rule 54    atomic_variable_for -> NUMBER

Terminals, with rules where they appear

ASIGNWORD            : 25
BALLOON              : 32 33 34 35
BEGIN                : 
COMMA                : 11 11 24 25 25 26 27 28 29 30 30 31 31 32 33 34 35 36 37
DEC                  : 27 37
DIVIDE               : 
DO                   : 25
DOW                  : 45 46
END                  : 
ENDDO                : 45 46
EQUAL                : 18 19 20 21 22 23
FOR                  : 44
FORASIGNWORD         : 25
FOREND               : 44
GAME                 : 
ID                   : 11 13 14 14 15 16 17 18 19 20 21 22 23 23 25 26 27 28 30 32 32 33 34 36 37 44 45 52 53
INC                  : 26 36
INT                  : 48
LBRACE               : 
LPAREN               : 11 24 25 25 26 27 28 29 30 31 32 33 34 35 36 37 45 46 49
LSPAREN              : 14 15 16 19 22 23 52
MAIN                 : 
MINUS                : 
MULTI                : 
NUMBER               : 12 15 16 19 22 29 33 34 35 35 44 46 49 50 54
OBJECT               : 31
PLUS                 : 
RANDOM               : 11 28 29 30
RBRACE               : 
RPAREN               : 11 24 25 25 26 27 28 29 30 31 32 33 34 35 36 37 45 46 49
RSPAREN              : 14 15 16 19 22 23 52
SEMCOL               : 11 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 44 45 46
SPIDERWEB            : 24
STRING               : 49
TEXT                 : 51
TIMES                : 44
USING                : 44
error                : 

Nonterminals, with rules where they appear

ATOMIC               : 18 19 20
BalloonFor           : 40
Body                 : 38 39 40 41 42 44 45 46
Dec                  : 6
DecFor               : 39
Dow                  : 4
For                  : 3
ForAssignWord        : 9
Inc                  : 5
IncFor               : 38
ObjectFor            : 42
Random               : 7
RandomFor            : 41
Spiderweb            : 8
TYPE                 : 16 17 20
atomic_variable      : 11 11 21 22 23 24 24 25 25 25 26 27 28 29 30 30 36 37 52
atomic_variable_for  : 31 31 31
empty                : 10 43
statements           : 1 2 3 4 5 6 7 8 9 0
var_assign           : 1
var_define           : 2

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    statements                     shift and go to state 1
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 1

    (0) S' -> statements .



state 2

    (1) statements -> var_assign . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    var_assign                     shift and go to state 2
    statements                     shift and go to state 23
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 3

    (2) statements -> var_define . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    var_define                     shift and go to state 3
    statements                     shift and go to state 24
    var_assign                     shift and go to state 2
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 4

    (3) statements -> For . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    For                            shift and go to state 4
    statements                     shift and go to state 25
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 5

    (4) statements -> Dow . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    Dow                            shift and go to state 5
    statements                     shift and go to state 26
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 6

    (5) statements -> Inc . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    Inc                            shift and go to state 6
    statements                     shift and go to state 27
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 7

    (6) statements -> Dec . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    Dec                            shift and go to state 7
    statements                     shift and go to state 28
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Random                         shift and go to state 8
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 8

    (7) statements -> Random . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    Random                         shift and go to state 8
    statements                     shift and go to state 29
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Spiderweb                      shift and go to state 9
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 9

    (8) statements -> Spiderweb . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
    (16) var_assign -> . TYPE ID LSPAREN NUMBER RSPAREN SEMCOL
    (17) var_assign -> . TYPE ID SEMCOL
    (18) var_define -> . ID EQUAL ATOMIC SEMCOL
    (19) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL ATOMIC SEMCOL
    (20) var_define -> . TYPE ID EQUAL ATOMIC SEMCOL
    (21) var_define -> . ID EQUAL atomic_variable SEMCOL
    (22) var_define -> . ID LSPAREN NUMBER RSPAREN EQUAL atomic_variable SEMCOL
    (23) var_define -> . ID LSPAREN ID RSPAREN EQUAL atomic_variable SEMCOL
    (44) For -> . FOR NUMBER TIMES USING ID Body FOREND SEMCOL
    (45) Dow -> . DOW LPAREN ID RPAREN Body ENDDO SEMCOL
    (46) Dow -> . DOW LPAREN NUMBER RPAREN Body ENDDO SEMCOL
    (26) Inc -> . INC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (27) Dec -> . DEC LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (11) Random -> . RANDOM LPAREN ID COMMA atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (24) Spiderweb -> . SPIDERWEB LPAREN atomic_variable COMMA atomic_variable RPAREN SEMCOL
    (25) ForAssignWord -> . FORASIGNWORD LPAREN atomic_variable COMMA atomic_variable RPAREN DO ASIGNWORD LPAREN ID COMMA atomic_variable RPAREN SEMCOL
    (47) empty -> .
    (48) TYPE -> . INT
    (49) TYPE -> . STRING LPAREN NUMBER RPAREN

    ID              shift and go to state 13
    FOR             shift and go to state 14
    DOW             shift and go to state 15
    INC             shift and go to state 16
    DEC             shift and go to state 17
    RANDOM          shift and go to state 18
    SPIDERWEB       shift and go to state 19
    FORASIGNWORD    shift and go to state 20
    $end            reduce using rule 47 (empty -> .)
    INT             shift and go to state 21
    STRING          shift and go to state 22

    Spiderweb                      shift and go to state 9
    statements                     shift and go to state 30
    var_assign                     shift and go to state 2
    var_define                     shift and go to state 3
    For                            shift and go to state 4
    Dow                            shift and go to state 5
    Inc                            shift and go to state 6
    Dec                            shift and go to state 7
    Random                         shift and go to state 8
    ForAssignWord                  shift and go to state 10
    empty                          shift and go to state 11
    TYPE                           shift and go to state 12

state 10

    (9) statements -> ForAssignWord . statements
    (1) statements -> . var_assign statements
    (2) statements -> . var_define statements
    (3) statements -> . For statements
    (4) statements -> . Dow statements
    (5) statements -> . Inc statements
    (6) statements -> . Dec statements
    (7) statements -> . Random statements
    (8) statements -> . Spiderweb statements
    (9) statements -> . ForAssignWord statements
    (10) statements -> . empty
